--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p $PORT -H 0.0.0.0",
+    "dev": "sleep 5 && next dev -p $PORT -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
