--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.21.0",
+    "@emotion/react": "^11.14.0",
+    "@next/swc-win32-x64-msvc": "^15.3.4",
     "@phosphor-icons/react": "^2.0.14",
+    "axios": "^1.10.0",
     "framer-motion": "^10.17.4",
     "next": "14.0.3",
     "nprogress": "^0.2.0",
