--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@chakra-ui/react": "^3.21.0",
     "@emotion/react": "^11.14.0",
-    "@next/swc-win32-x64-msvc": "^15.3.4",
     "@phosphor-icons/react": "^2.0.14",
     "axios": "^1.10.0",
     "framer-motion": "^10.17.4",
@@ -42,5 +41,9 @@
     "react-image-zoom": "^1.3.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "optionalDependencies": {
+    "@next/swc-win32-x64-msvc": "^15.3.4"
   }
+
 }
