--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@phosphor-icons/react": "^2.0.14",
     "axios": "^1.10.0",
+    "firebase": "^11.10.0",
     "framer-motion": "^10.17.4",
     "next": "14.0.3",
     "nprogress": "^0.2.0",
@@ -45,5 +46,4 @@
   "optionalDependencies": {
     "@next/swc-win32-x64-msvc": "^15.3.4"
   }
-
 }
