--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
     "framer-motion": "^10.17.4",
+    "lucide-react": "^0.541.0",
     "next": "14.0.3",
     "nprogress": "^0.2.0",
     "rc-slider": "^10.5.0",
