--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@carbon/react": "^1.89.0",
     "@chakra-ui/react": "^3.21.0",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
     "@phosphor-icons/react": "^2.0.14",
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
@@ -19,10 +22,12 @@
     "lucide-react": "^0.541.0",
     "next": "14.0.3",
     "nprogress": "^0.2.0",
+    "phosphor-react": "^1.4.1",
     "rc-slider": "^10.5.0",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
+    "react-icons": "^5.5.0",
     "react-loader-spinner": "^6.1.6",
     "react-loading": "^2.0.3",
     "react-paginate": "^8.2.0",
