--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@carbon/react": "^1.89.0",
-    "@chakra-ui/react": "^3.21.0",
+    "@chakra-ui/react": "^3.26.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
@@ -21,12 +21,14 @@
     "framer-motion": "^10.17.4",
     "lucide-react": "^0.541.0",
     "next": "14.0.3",
+    "next-themes": "^0.4.6",
     "nprogress": "^0.2.0",
     "phosphor-react": "^1.4.1",
     "rc-slider": "^10.5.0",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-loader-spinner": "^6.1.6",
     "react-loading": "^2.0.3",
